--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/tinybike/vpnc-orst-vpn3k#readme",
   "dependencies": {
     "chalk": "^1.1.1",
+    "mssql": "^2.2.0",
     "vpnc": "^1.4.10"
   }
 }
